 * availability= argument now works differently for count models. availability must now be the same length as number of segments (nrow(segment.data)) and will multiply the offset (effective area) rather than the number of animals observed to be more coherent with how detectability is handled in this case.


# 2.3.0
 * fixed dsm_varprop (gam.fixed.priors) for response distributions with fixed scale parameters. Negative binomial results before now may have been incorrect!

# 2.2.18
 * Clarification of the predict.dsm return documentation. Thanks to Dave Fifield for the suggestion.
 * off.set=NULL lead to predictions of 0 when density was used. Now just returns density. Thanks to Dave Fifield for the catch.


# 2.2.17
 * Now Suggests package "sp" (needed for some parts of the mexdolphin example data)

# 2.2.16
 * check that any Sample.Labels match up, if none do then throw an error. Thanks to Madhura Davate for bringing this issue to my attention.
 * gamma option removed, since it now is not ignored by gam(). If using method="GCV.Cp" then gamma=1.4 should still be used (but generally we advise using REML rather than GCV for smoothing parameter selection)
 * dsm now requires mgcv version 1.8-23 or higher.
 * dsm.var.prop (and dsm_varprop) now throw an error when there are no covariates in the detection function as it can't do anything useful
 * new function obs_exp is a diagnostic function to compare observed and expected counts at different covariate aggregations

# 2.2.15
 * when mexdolphins is loaded using data(), the data no longer need to be attach()ed
 * dsm.var.prop throws an error when count or N are not used as the response.
 * dsm.var.prop now calls dsm_varprop, which keeps the scale parameter constant when refitting models for variance propagation. dsm_varprop provides a lower-level interface to variance propagation and is probably faster and more flexible.